# minecraft-clone

./: CMakeLists.txt  README.md  main.cpp
shaders/: fragmentShader.glsl  shader.fragment  shader.vertex
src/: main.cpp
src/camera/: camera.cpp  camera.h
src/common/: common-values.h
src/light/: directional-light.cpp  directional-light.h  light.cpp  light.h  point-light.cpp  point-light.h  spot-light.cpp  spot-light.h
src/material/: material.cpp  material.h
src/mesh/: mesh.cpp  mesh.h
src/model/: model.cpp  model.h
src/shader/: shader.cpp  shader.h
src/shared/: common-values.h
src/text/: text.cpp  text.h
src/texture/: texture.cpp  texture.h
src/window/: window.cpp  window.h
